# tiktok-video-statistics-collector

./: README.md  main.py  pyproject.toml  setup.sh
.github/workflows/: python-app.yml
