[tool.poetry]
name = "tiktok-video-scraping"
version = "0.1.0"
description = "Scraping TikTok video statistics"
authors = ["Matheus Correia"]

[tool.poetry.dependencies]
python = "^3.9"
TikTokApi = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
